2000-12-13  Andreas J. Koenig  <andreas.koenig@anima.de>

	* Return 1 after deleting CHECKSUMS in an empty (or otherwise not
	indexed) directory. We used to return without argument.

2000-12-11  Andreas J. Koenig  <andreas.koenig@anima.de>

	* Delete CHECKSUMS if directory is empty. 

	* Skip symlinks. Symlinks are considered inappropriate in CPAN
	author directories. They violate the principle of a one to one
	relationship between filename and file.

2000-12-10  Andreas J. Koenig  <andreas.koenig@anima.de>

	* Releasing as 1.003
	
	* original version; created by h2xs 1.19