@@ -1,26 +1,26 @@
-# CHECKSUMS file written on Wed Dec 13 11:22:01 2000 by CPAN::Checksums (v1.008)
+# CHECKSUMS file written on Sun Mar 31 20:25:10 2002 by CPAN::Checksums (v1.009)
 $cksum = {
+  'RCS' => {
+    'shortname' => 'rcs0.rcs',
+    'isdir' => 1
+  },
   '42.gz' => {
-    'md5-ungz' => '50a2fabfdd276f573ff97ace8b11c5f4',
-    'mtime' => '2000-12-10',
-    'md5' => '915cdde7181ab542763969e063b7a9a9',
     'shortname' => '42.gz',
+    'mtime' => '2000-12-10',
+    'md5-ungz' => '50a2fabfdd276f573ff97ace8b11c5f4',
+    'md5' => '915cdde7181ab542763969e063b7a9a9',
     'size' => '26'
   },
-  '43' => {
-    'mtime' => '2000-12-13',
-    'md5' => 'f0287f33eba7192e2a9c6a14f829aa1a',
-    'shortname' => '430.43',
-    'size' => '3'
-  },
-  'RCS' => {
-    'isdir' => 1,
-    'shortname' => 'rcs0.rcs'
-  },
   'updatedir.t' => {
+    'shortname' => 'updated0.t',
     'mtime' => '2000-12-11',
     'md5' => '14c7bde8c9a86c3907305af67e8d15bb',
-    'shortname' => 'updated0.t',
     'size' => '1375'
+  },
+  '43' => {
+    'shortname' => '430.43',
+    'mtime' => '2002-03-31',
+    'md5' => 'f0287f33eba7192e2a9c6a14f829aa1a',
+    'size' => '3'
   }
 };
